tests/baselines/reference/accessorWithoutBody2.errors.txt
tests/cases/compiler/accessorWithoutBody2.ts(1,20): error TS1005: '{' expected.


==== tests/cases/compiler/accessorWithoutBody2.ts (1 errors) ====
    var v = { set foo(a) }
                       ~
!!! error TS1005: '{' expected.